# pruner

./: .gitignore  .gitleaksignore  .pruner-ignore.yml  .tva  BUS_FACTOR.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  action.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: false-positive.yml  rule-proposal.yml  vulnerability.yml
.github/workflows/: backfill-signatures.yml  cisco-upstream-check.yml  release.yml  reusable-full-scan.yml  scan.yml  scorecard.yml  self-scan.yml  test-scan-yml.yml
docs/: architecture.md  consumer-integration.md  coverage-matrix.md  fp-audit.md  secrets.md  sha-pinning.md  threat-model.md  verify-a-report.md  why-cisco.md  writing-rules.md
examples/: EXPECTATIONS.md
examples/benign-skill/: EXPECTATIONS.md  SKILL.md
examples/finding-positive-skill/: EXPECTATIONS.md  SKILL.md
examples/vulnerable-skill/: EXPECTATIONS.md  SKILL.md
rules/: README.md
rules/frontmatter-conformance/: FC001-name-kebab-case.yml  FC002-description-length.yml  FC003-custom-fields-under-metadata.yml  FC004-metadata-version-forbidden.yml  FC005-license-spdx.yml
rules/permissions/: PI-PERM-001-allowed-tools-mismatch.yml
rules/prompt-defense/: PD001-role-boundary.yml  PD002-instruction-boundary.yml  PD003-data-leakage.yml  PD004-output-control.yml  PD005-multilang-bypass.yml  PD006-unicode-awareness.yml  PD007-context-overflow.yml  PD008-indirect-injection.yml  PD009-social-engineering.yml  PD010-harmful-content.yml  PD011-abuse-prevention.yml  (+1 more)
schema/: allowlist-v1.json  policy-v1.json  report-v1.json  rule-v1.json
scripts/: compose-report.sh  publish-report.sh  setup-cisco.sh  verify-action-pins.sh
templates/: SECURITY.md.tmpl  badge-snippets.md  workflow-full.yml  workflow-minimal.yml
wrapper/: CISCO_PIN.md  README.md  pyproject.toml
wrapper/src/pruner_wrapper/: __init__.py  __main__.py  allowlist.py  attestation.py  badge.py  cisco_runner.py  cli.py  compose.py  confusables.py  lore.py  pack_runner.py  policy.py  sarif.py  snyk_runner.py  source_confidence.py  spdx.py  types.py
wrapper/src/pruner_wrapper/matchers/: __init__.py  _context.py  absence_regex_matcher.py  codepoint_range_matcher.py  frontmatter_validator.py  homoglyph_matcher.py  pep723_validator.py  regex_matcher.py  tool_grant_validator.py
wrapper/tests/: conftest.py  test_allowlist.py  test_attestation.py  test_badge.py  test_cisco_runner.py  test_cisco_runner_subprocess.py  test_cli.py  test_cli_more.py  test_compose.py  test_confusables.py  test_lore.py  test_pack_runner.py  test_policy.py  test_sarif.py  test_snyk_runner.py  test_snyk_runner_subprocess.py  test_source_confidence.py  test_spdx.py  test_types.py
wrapper/tests/matchers/: test_absence_regex_matcher.py  test_codepoint_range_matcher.py  test_context.py  test_frontmatter_validator.py  test_homoglyph_matcher.py  test_pep723_validator.py  test_regex_matcher.py
wrapper/tests/rules/: _helpers.py  test_FC001.py  test_FC002.py  test_FC003.py  test_FC004.py  test_FC005.py  test_PD_pack.py  test_PI_EXFIL_001.py  test_PI_EXFIL_002.py  test_PI_IDFILE_001.py  test_PI_MDIMG_001.py  test_PI_PEP723_001.py  test_PI_PERM_001.py  test_PI_UNI_001.py  test_PI_UNI_002.py  test_PI_UNI_003.py  test_PI_UNI_004.py  test_PI_UNI_005.py
(+12 files in other folders)
