[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pruner-wrapper"
version = "0.2.0"
description = "Pruner — Coroboros's attestation chain for agent skill repositories. Wrapper module."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Coroboros", email = "ob@coroboros.com" },
]
requires-python = ">=3.10"
keywords = [
    "agent-skills",
    "ai-security",
    "attestation",
    "claude",
    "claude-code",
    "coroboros",
    "prompt-injection",
    "security",
    "skills",
    "supply-chain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML>=6.0,<7",
    "cisco-ai-skill-scanner==2.0.9",
]

[project.scripts]
pruner = "pruner_wrapper.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "jsonschema>=4.21",
    "types-PyYAML>=6",
]

[project.urls]
Homepage = "https://github.com/ob-aion/pruner"
Repository = "https://github.com/ob-aion/pruner"
Issues = "https://github.com/ob-aion/pruner/issues"
Documentation = "https://github.com/ob-aion/pruner/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pruner_wrapper" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # bandit
    "W",    # pycodestyle warnings
    "C4",   # comprehensions
    "RET",  # return values
    "SIM",  # simplify
]
ignore = [
    "S101",  # assert is fine in tests
    "S603",  # subprocess.run with validated input is the design
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "S607", "S105", "S108"]
# Rule-test filenames mirror the rule IDs (FC001, PI-UNI-001, …) which are
# SCREAMING_SNAKE; pep8-naming N999 doesn't apply to test discovery.
"tests/rules/test_*.py" = ["S101", "S603", "S607", "S105", "S108", "N999"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
files = ["src"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: integration tests requiring external binaries (deselect with '-m \"not integration\"')",
]
